package com.xinchentechnote.fix;

public interface Entry {
  boolean isRequired();

  String getName();
}
