package com.xinchentechnote.fix;

public enum MsgType {
  HEADER,
  TRAILER,
  BODY,
  GROUP,
  COMPONENT,
}
