package com.xinchentechnote.fix;

import java.util.List;

public interface StructuredDef {
  String getName();

  List<Entry> getEntries();
}
